--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,6 +27,7 @@ dist.jar=${dist.dir}/SNS.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.HibernateScanNStock.jar=lib/HibernateScanNStock.jar
 file.reference.json-simple-1.1.1.jar=lib/json-simple-1.1.1.jar
 file.reference.jsoup-1.7.2.jar=lib/jsoup-1.7.2.jar
 file.reference.mysql-connector-java-5.1.25-bin.jar=lib/mysql-connector-java-5.1.25-bin.jar
@@ -35,7 +36,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.json-simple-1.1.1.jar}:\
     ${file.reference.jsoup-1.7.2.jar}:\
-    ${file.reference.mysql-connector-java-5.1.25-bin.jar}
+    ${file.reference.mysql-connector-java-5.1.25-bin.jar}:\
+    ${file.reference.HibernateScanNStock.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
