--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -37,7 +37,9 @@ javac.classpath=\
     ${file.reference.json-simple-1.1.1.jar}:\
     ${file.reference.jsoup-1.7.2.jar}:\
     ${file.reference.mysql-connector-java-5.1.25-bin.jar}:\
-    ${file.reference.HibernateScanNStock.jar}
+    ${file.reference.HibernateScanNStock.jar}:\
+    ${libs.hibernate-persistence.classpath}:\
+    ${libs.hibernate-support.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
